# AnaePath

./: setup.cfg
src/anaerpath/: __init__.py  anaerpath.py  cli.py  utils.py
src/anaerpath/.ipynb_checkpoints/: melon-checkpoint.py
src/anaerpath/data/: pathway_summary.xlsx  target_module.xlsx
src/anaerpath/scripts/: pathway_sum.py  search_pathway.py
src/anaerpath/scripts/.ipynb_checkpoints/: KO_json_2_KO_table-checkpoint.py  compute_ko_expr-checkpoint.py  filter_pathway-checkpoint.py
