[metadata]
name = anaerpath
version = attr: anaerpath.__version__
classifiers = 
	Programming Language :: Python :: 3

license = MIT
description = ...
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    ...
    ...

[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    = src
packages = find:

[options.entry_points]
    console_scripts = 
        anaerpath = anaerpath.cli:cli

[options.packages.find]
    where = src